--- a/src/app/Components/Footer/footer.css
+++ b/src/app/Components/Footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: #151820;
-  padding: 50px 0;
+  padding: 50px 0 20px 0;
   color: #fff;
   font-family: Arial, sans-serif;
   position: relative;
